добавил windi-css и первоначальный вывод данных сделал

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,7 @@ $secondary2: hsl(173, 78%, 89%);
 $accent: hsl(173, 53%, 46%);
 
 $white: hsl(0, 0%, 100%);
+$white80: hsla(0, 0%, 100%, 80%);
 $black: hsl(0, 0%, 0%);
 $black80: hsla(0, 0%, 0%, 80%);
+
