--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,5 @@ $white: hsl(0, 0%, 100%);
 $white80: hsla(0, 0%, 100%, 80%);
 $black: hsl(0, 0%, 0%);
 $black80: hsla(0, 0%, 0%, 80%);
+$black40: hsla(0, 0%, 0%, 40%);
 
